# graft

./: .clippy.toml  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  COPILOT.md  Cargo.toml  DEMO.md  DESIGN.md  Dockerfile  Dockerfile.antithesis  FUTURE.md  PLAN.md  README.md  RELEASE.md  RELEASE_TODO.md  SCRATCH.md  TESTS.md  TODO.md  _typos.toml  antithesis.Dockerfile  buf.gen.yaml  context7.json  deploy.sh  justfile  metastore.toml  pagestore.toml  renovate.json  shell.sh  sqlite-dist.toml  sqlite3.sh  sqlite_tests.sh  sqlpkg.json  submit.sh
crates/graft/: Cargo.toml
crates/graft-client/: Cargo.toml  README.md
crates/graft-client/examples/: graft-kv.rs  silly-kv.rs  virtual_file.rs
crates/graft-client/src/: builder.rs  error.rs  lib.rs  metastore.rs  net.rs  oracle.rs  pagestore.rs  pair.rs  request.rs
crates/graft-client/src/runtime/: fetcher.rs  handle.rs  runtime.rs  shared.rs  snapshot.rs  storage.rs  sync.rs  txn.rs  volume.rs  volume_handle.rs  volume_reader.rs  volume_writer.rs
crates/graft-core/: Cargo.toml
crates/graft-core/src/: byte_unit.rs  cbe.rs  checkpoint_set.rs  checkpoints.rs  checksum.rs  codec.rs  commit.rs  commit_hash.rs  etag.rs  gid.rs  graft.rs  guid.rs  handle_id.rs  hash_table.rs  lib.rs  logref.rs  lsn.rs  merge_runs.rs  offset.rs  page.rs  page_count.rs  page_idx.rs  page_index.rs  page_offset.rs  page_range.rs  pageidx.rs  pageset.rs  protoutil.rs  snapshot.rs  supervisor.rs  testutil.rs  volume_control.rs  volume_fork.rs  volume_handle.rs  volume_id.rs  volume_meta.rs  volume_ref.rs  zerocopy_err.rs
crates/graft-core/src/bilrost_util/: newtype_proxy.rs  zerocopy_encoding.rs
crates/graft-core/src/codec/: mod.rs  newtype_proxy.rs  zerocopy_encoding.rs  zerocopy_proxy.rs
crates/graft-core/src/gid/: prefix.rs  random.rs  time.rs
crates/graft-ext/: Cargo.toml
crates/graft-ext/include/: libgraft_ext.h  module.modulemap
crates/graft-ext/src/: lib.rs
crates/graft-fuse/: Cargo.toml  README.md
crates/graft-fuse/src/: dbfs.rs  fusefs.rs  graftdir.rs  lib.rs
crates/graft-fuse/src/dbfs/: field.rs  file_cache.rs  inode.rs  types.rs
crates/graft-fuse/src/sql/: query_field.sql  schema.sql  seed.sql
crates/graft-kernel/: Cargo.toml
crates/graft-kernel/src/: changeset.rs  err.rs  graft.rs  graft_reader.rs  graft_writer.rs  lib.rs  named_volume.rs  page_status.rs  remote.rs  search_path.rs  setup.rs  snapshot.rs  sync_point.rs  tag_handle.rs  tracked_snapshot.rs  volume.rs  volume_err.rs  volume_name.rs  volume_reader.rs  volume_writer.rs
crates/graft-kernel/src/local/: fjall_storage.rs  staged_segment.rs  storage.rs
crates/graft-kernel/src/remote/: segment.rs
crates/graft-kernel/src/rt/: action.rs  err.rs  job.rs  rpc.rs  runtime.rs  runtime_handle.rs  task.rs
crates/graft-pagestore/: Cargo.toml
crates/graft-pagestore/src/: lib.rs  segment.rs  storage.rs  supervisor.rs  testutil.rs
crates/graft-pagestore/src/api/: error.rs  extractors.rs  read_pages.rs  response.rs  router.rs  state.rs  task.rs  write_pages.rs
crates/graft-pagestore/src/segment/: bus.rs  closed.rs  loader.rs  manager.rs  offsets_map.rs  open.rs  uploader.rs  writer.rs
crates/graft-pagestore/src/storage/: atomic_fs.rs  cache.rs  disk.rs  mem.rs  resource_pool.rs
crates/graft-pagestore/src/volume/: catalog.rs  index.rs  kv.rs
crates/graft-proto/: Cargo.toml
crates/graft-proto/src/: graft.common.v1.rs  graft.core.v1.rs  graft.local.v1.rs  graft.metastore.v1.rs  graft.pagestore.v1.rs  graft.remote.v1.rs  lib.rs  mod.rs
crates/graft-server/: Cargo.toml
crates/graft-server/src/: bytes_vec.rs  lib.rs  limiter.rs  object_store_util.rs  resource_pool.rs  supervisor.rs  testutil.rs
crates/graft-server/src/api/: auth.rs  error.rs  extractors.rs  health.rs  metrics.rs  response.rs  routes.rs  task.rs
crates/graft-server/src/metrics/: labels.rs  registry.rs  split_gauge.rs
crates/graft-server/src/segment/: bus.rs  closed.rs  index.rs  loader.rs  multigraft.rs  offsets_map.rs  open.rs  uploader.rs  writer.rs
crates/graft-server/src/storage/: cache.rs  disk.rs  mem.rs
crates/graft-server/src/testutil/: test_object_store.rs
crates/graft-server/src/volume/: catalog.rs  commit.rs  kv.rs  store.rs  updater.rs
crates/graft-sqlite/: Cargo.toml
crates/graft-sqlite-extension/: Cargo.toml
crates/graft-sqlite-extension/include/: libgraft.h  module.modulemap
crates/graft-sqlite-extension/src/: lib.rs
crates/graft-sqlite/src/: dbg.rs  file.rs  lib.rs  pragma.rs  register.rs  vfs.rs
crates/graft-sqlite/src/file/: mem.rs  mem_file.rs  vol_file.rs  volume.rs
crates/graft-test/: Cargo.toml
crates/graft-test-macro/: Cargo.toml
crates/graft-test-macro/src/: lib.rs
crates/graft-test/src/: lib.rs  test_tracing.rs  workload.rs
crates/graft-test/src/workload/: fjall_storage_bench.rs  simple_reader.rs  simple_writer.rs  sqlite_sanity.rs
crates/graft-test/tests/: remote_commit_faults.rs  sqlite.rs  sync.rs  verify_snapshot.rs  verify_soft_truncate.rs  workload_sanity.rs  workloads_sanity.rs
crates/graft-test/workloads/: fjall_storage.toml  reader.toml  sanity.toml  simple_reader.toml  simple_writer.toml  sqlite_sanity.toml  writer.toml
crates/graft-tool/: Cargo.toml
crates/graft-tool/src/: main.rs
crates/graft-tracing/: Cargo.toml
crates/graft-tracing/src/: lib.rs
crates/graft/src/: core.rs  err.rs  fault.rs  lib.rs  oracle.rs  pagestore.rs  remote.rs  setup.rs  snapshot.rs  testutil.rs  volume.rs  volume_reader.rs  volume_writer.rs
crates/graft/src/core/: cbe.rs  (+16 more)
crates/precept/: Cargo.toml  README.md
crates/precept/src/: catalog.rs  dispatch.rs  lib.rs  macros.rs  macros_stubs.rs  random.rs
crates/splinter/: Cargo.toml  README.md
crates/splinter/benches/: bitmaps.rs
crates/splinter/src/: bitmap.rs  block.rs  decode.rs  index.rs  lib.rs  map.rs  ops.rs  partition.rs  relational.rs  splinter.rs  testutil.rs  util.rs  writer.rs
crates/sqlite-plugin/: Cargo.toml  README.md  build.rs
crates/sqlite-plugin/examples/: memvfs.rs
crates/sqlite-plugin/src/: flags.rs  lib.rs  logger.rs  mock.rs  vfs.rs
(+278 files in other folders)
