[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
authors = ["orbitinghail <hello@orbitinghail.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/orbitinghail/graft"
homepage = "https://github.com/orbitinghail/graft"
rust-version = "1.88"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace.dependencies]
assert_matches = "1.5.0"
async-stream = "0.3.6"
async-trait = "0.1.88"
axum = "0.8.6"
axum-test = "18.1.0"
bilrost = "0.1014.1"
blake3 = "1.8.2"
bs58 = "0.5.1"
bytes = "1.10.1"
bytestring = "1.5.0"
circular-buffer = "1.2.0"
clap = "4.5.49"
config = { version = "0.15.18", features = ["toml"] }
crossbeam = "0.8.4"
culprit = "0.4.0"
enum_dispatch = "0.3.13"
event-listener = "5.4.1"
file-lock = "2.1.11"
fjall = { version = "2.11.2", features = ["bytes", "lz4"] }
foldhash = "0.2.0"
futures = "0.3.31"
glob = "0.3.3"
hashbrown = "0.16.0"
hex = "0.4.3"
http = "1.3.1"
indoc = "2.0.7"
itertools = "0.14.0"
libc = "0.2.177"
lsm-tree = { version = "2.10.4", features = ["bytes"] }
measured = "0.0.24"
memmap2 = "0.9.9"
object_store = "0.12.4"
parking_lot = "0.12.5"
platform-dirs = "0.3.0"
precept = "0.1.0"
proc-macro2 = "1.0.101"
prost = "0.14.1"
prost-types = "0.14.1"
quick_cache = "0.6.18"
quote = "1.0.41"
rand = "0.9.2"
range-set-blaze = "0.4.1"
rlimit = "0.10.2"
rusqlite = "0.37.0"
rusty_paseto = "0.8.0"
serde = "1.0.228"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
smallvec = { version="1.15.1", features = ["const_new"] }
splinter-rs = "0.9.1"
sqlite-plugin = { version = "0.5.0", default-features = false }
static_assertions = "1.1.0"
syn = "2.0.107"
tempfile = "3.23.0"
text_trees = "0.1.2"
thiserror = "2.0.17"
tokio = "1.48.0"
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
toml = "0.9.8"
tower-http = "0.6.6"
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["smallvec", "std", "fmt", "ansi", "env-filter", "parking_lot"] }
tryiter = "0.6.0"
ureq = { version = "3.1.2", default-features = false, features = [ "rustls", "brotli", ] }
url = "2.5.7"
xxhash-rust = "0.8.15"
zerocopy = { version = "0.8.27", features = ["derive"] }
zstd = "0.13.3"

[workspace.lints.clippy]
disallowed_methods = "deny"
uninlined_format_args = "warn"
doc_markdown = "warn"
map_unwrap_or = "warn"
redundant_clone = "warn"
undocumented_unsafe_blocks = "warn"

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
