[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
authors = ["orbitinghail <hello@orbitinghail.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/orbitinghail/graft"
homepage = "https://github.com/orbitinghail/graft"
rust-version = "1.91"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace.dependencies]
assert_matches = "1.5.0"
bilrost = "0.1014.1"
blake3 = "1.8.2"
bs58 = "0.5.1"
bytes = "1.10.1"
bytestring = "1.5.0"
circular-buffer = "1.2.0"
clap = "4.5.49"
config = { version = "0.15.18", features = ["toml"] }
enum_dispatch = "0.3.13"
file-lock = "2.1.11"
fjall = { version = "3.0.0-rc.6", features = ["bytes_1", "lz4"] }
foldhash = "0.2.0"
futures = "0.3.31"
hashbrown = "0.16.0"
indoc = "2.0.7"
itertools = "0.14.0"
object_store = { version = "0.12.4", features = ["aws"] }
parking_lot = "0.12.5"
platform-dirs = "0.3.0"
precept = { version = "0.1.0", path = "../precept" }
rand = "0.9.2"
range-set-blaze = "0.4.1"
rusqlite = "0.37.0"
serde = "1.0.228"
smallvec = { version="1.15.1", features = ["const_new"] }
splinter-rs = "0.10.0"
sqlite-plugin = { version = "0.5.0", default-features = false }
static_assertions = "1.1.0"
tempfile = "3.23.0"
text_trees = "0.1.2"
thiserror = "2.0.17"
tokio = "1.48.0"
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tryiter = "0.6.0"
xxhash-rust = "0.8.15"
zerocopy = { version = "0.8.27", features = ["derive"] }
zstd = "0.13.3"

[workspace.lints.clippy]
disallowed_methods = "deny"
uninlined_format_args = "warn"
doc_markdown = "warn"
map_unwrap_or = "warn"
redundant_clone = "warn"
undocumented_unsafe_blocks = "warn"

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
