[package]
name = "graft-client"
version = "0.1.0"
edition = "2021"

[dependencies]
graft-core = { path = "../graft-core" }
graft-proto = { path = "../graft-proto" }
splinter = { path = "../splinter" }

bytes = { workspace = true }
culprit = { workspace = true }
crossbeam = { workspace = true }
fjall = { workspace = true, features = ["bytes"] }
log = { workspace = true }
lsm-tree = { workspace = true, features = ["bytes"] }
parking_lot = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
static_assertions = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tryiter = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }
zerocopy = { workspace = true }

antithesis_sdk = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
graft-core = { path = "../graft-core", features = ["testutil"] }
env_logger = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[features]
antithesis = ["antithesis_sdk", "serde_json"]
