[package]
name = "graft-client"
version = "0.1.4-rc.8"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

keywords = ["storage", "replication", "edge"]
description = "Transactional page storage engine supporting lazy partial replication to the edge. Optimized for scale and cost over latency. Leverages object storage for durability."

[lints]
workspace = true

[dependencies]
graft-core = { path = "../graft-core", version = "0.1.4-rc.8" }
graft-proto = { path = "../graft-proto", version = "0.1.4-rc.8" }

splinter-rs = { workspace = true }
precept = { workspace = true }
bytes = { workspace = true }
circular-buffer = { workspace = true }
culprit = { workspace = true }
crossbeam = { workspace = true }
fjall = { workspace = true }
lsm-tree = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
static_assertions = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tryiter = { workspace = true }
ureq = { workspace = true }
http = { workspace = true }
url = { workspace = true }
zerocopy = { workspace = true }

[dev-dependencies]
graft-core = { path = "../graft-core", features = ["testutil"] }
graft-tracing = { path = "../graft-tracing" }
graft-test = { path = "../graft-test" }
clap = { workspace = true, features = ["derive"] }
