[package]
name = "graft-core"
version = "0.1.5"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

description = "Core components and types for the Graft storage engine."

[lints]
workspace = true

[dependencies]
culprit = { workspace = true }
blake3 = { workspace = true }
bs58 = { workspace = true }
bytes = { workspace = true }
foldhash = { workspace = true }
hashbrown = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
static_assertions = { workspace = true }
thiserror = { workspace = true }
zerocopy = { workspace = true }
assert_matches = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
graft-test = { path = "../graft-test" }

[features]
default = []
testutil = []
