[package]
name = "graft-core"
version = "0.2.0-rc.5"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

description = "Core components and types for the Graft storage engine."

[lints]
workspace = true

[dependencies]
assert_matches = { workspace = true }
bilrost = { workspace = true, features = ["bytestring", "smallvec"] }
blake3 = { workspace = true }
bs58 = { workspace = true }
bytes = { workspace = true }
bytestring = { workspace = true }
culprit = { workspace = true }
foldhash = { workspace = true }
hashbrown = { workspace = true }
rand = { workspace = true }
range-set-blaze = { workspace = true }
serde = { workspace = true, features = ["derive"] }
smallvec = { workspace = true }
splinter-rs = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }
xxhash-rust = { workspace = true }
zerocopy = { workspace = true }

[dev-dependencies]
graft-test = { path = "../graft-test" }

[features]
default = []
testutil = []
