[package]
name = "graft-ext"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
graft = { path = "../graft" }
graft-sqlite = { path = "../graft-sqlite" }
graft-tracing = { path = "../graft-tracing" }

config = { workspace = true, features = ["toml"] }
platform-dirs = { workspace = true }
precept = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlite-plugin = { workspace = true, default-features = false }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }

[features]
default = ["dynamic"]
dynamic = ["sqlite-plugin/dynamic"]
static = ["sqlite-plugin/static"]

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["precept"]
