[package]
name = "graft-fuse"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
graft-core = { path = "../graft-core", version = "0.1.6-rc.1" }
graft-client = { path = "../graft-client", version = "0.1.6-rc.1" }
graft-sqlite = { path = "../graft-sqlite", version = "0.1.6-rc.1" }
graft-tracing = { path = "../graft-tracing", version = "0.1.6-rc.1" }

fuser = { workspace = true, features = ["abi-7-31"] }
libc = { workspace = true }
clap = { workspace = true, features = ["derive"] }
sqlite-plugin = { workspace = true, features = ["static"] }
rusqlite = { workspace = true, features = ["bundled"] }
url = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true, features = ["display"] }
thiserror = { workspace = true }
quick_cache = { workspace = true }

[lints]
workspace = true
