[package]
name = "graft-kernel"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
graft-core = { path = "../graft-core" }
graft-tracing = { path = "../graft-tracing" }

splinter-rs = { workspace = true }
precept = { workspace = true, features = ["antithesis"] }
culprit = { workspace = true }

fjall = { workspace = true }
lsm-tree = { workspace = true }
zerocopy = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
bilrost = { workspace = true }
static_assertions = { workspace = true }
tryiter = { workspace = true }
smallvec = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "time", "parking_lot"] }
tokio-stream = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
graft-core = { path = "../graft-core", features = ["testutil"] }
graft-test = { path = "../graft-test" }
assert_matches = { workspace = true }
rand = { workspace = true }
