[package]
name = "graft-kernel"
version = "0.1.5"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
graft-core = { path = "../graft-core" }
graft-tracing = { path = "../graft-tracing" }

splinter-rs = { workspace = true }
precept = { workspace = true, features = ["antithesis"] }
culprit = { workspace = true }

event-listener = { workspace = true }
async-stream = { workspace = true }
circular-buffer = { workspace = true }
fjall = { workspace = true }
lsm-tree = { workspace = true }
zerocopy = { workspace = true }
bytestring = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
bilrost = { workspace = true }
object_store = { workspace = true, features = ["aws"] }
static_assertions = { workspace = true }
tryiter = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true, features = ["derive"] }
smallvec = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
text_trees = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "time", "parking_lot"] }
tokio-stream = { workspace = true }
futures = { workspace = true }
zstd = { workspace = true }
range-set-blaze = { workspace = true }

[dev-dependencies]
graft-core = { path = "../graft-core", features = ["testutil"] }
graft-test = { path = "../graft-test" }
assert_matches = { workspace = true }
rand = { workspace = true }
