[package]
name = "pagestore"
version = "0.1.0"
edition = "2021"

[dependencies]
graft-core = { path = "../graft-core" }

ahash = "0.8.11"
tokio = { version = "1.40.0", features = ["full", "test-util"] }
odht = { git = "https://github.com/carlsverre/odht.git" }
static_assertions = "1.1.0"
zerocopy = { version = "0.7.35", features = ["derive"] }
anyhow = "1.0.89"
thiserror = "1.0.63"
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
object_store = { version = "0.11.0", features = ["aws"] }
bytes = "1.7.2"
memmap2 = "0.9.5"
rlimit = "0.10.2"
nix = { version = "0.29.0", features = ["fs"] }

[dev-dependencies]
graft-core = { path = "../graft-core", features = ["testutil"] }
tempfile = "3.12.0"
