[package]
name = "graft-proto"
version = "0.1.0"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
graft-core = { path = "../graft-core" }
splinter = { path = "../splinter" }

culprit = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
zerocopy = { workspace = true }
