[package]
name = "graft-proto"
version = "0.1.4-rc.7"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

description = "Protocol definitions for the Graft storage engine."

[lints]
workspace = true

[dependencies]
graft-core = { path = "../graft-core", version = "0.1.4-rc.7" }

splinter-rs = { workspace = true }
culprit = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
