[package]
name = "graft-server"
version = "0.1.0"
edition = "2021"

[dependencies]
graft-core = { path = "../graft-core" }
graft-proto = { path = "../graft-proto" }
graft-client = { path = "../graft-client" }
graft-tracing = { path = "../graft-tracing" }
splinter = { path = "../splinter" }
precept = { path = "../precept", features = ["antithesis"]}

culprit = { workspace = true }
tryiter = { workspace = true }
tokio = { workspace = true, features = [
    "bytes",
    "rt-multi-thread",
    "signal",
    "test-util",
    "tokio-macros",
] }
static_assertions = { workspace = true }
zerocopy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
object_store = { workspace = true, features = ["aws"] }
bytes = { workspace = true }
memmap2 = { workspace = true }
http = { workspace = true }
rlimit = { workspace = true }
nix = { workspace = true }
hashbrown = { workspace = true }
futures = { workspace = true }
axum = { workspace = true, features = ["http2"] }
tower-http = { workspace = true, features = ["compression-full"] }
prost = { workspace = true }
prost-types = { workspace = true }
assert_matches = { workspace = true }
itertools = { workspace = true }
fjall = { workspace = true, features = ["bytes"] }
lsm-tree = { workspace = true, features = ["bytes"] }
tempfile = { workspace = true }
foldhash = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
config = { workspace = true }
url = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
measured = { workspace = true }

[dev-dependencies]
graft-core = { path = "../graft-core", features = ["testutil"] }
graft-test = { path = "../graft-test" }
axum-test = { workspace = true }
