[package]
name = "graft-server"
version = "0.1.4-rc.2"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
graft-core = { path = "../graft-core" }
graft-proto = { path = "../graft-proto" }
graft-client = { path = "../graft-client" }
graft-tracing = { path = "../graft-tracing" }

rusty_paseto = { workspace = true, features = ["batteries_included"] }
splinter-rs = { workspace = true }
precept = { workspace = true, features = ["antithesis"] }
event-listener = { workspace = true }
culprit = { workspace = true }
tryiter = { workspace = true }
itertools = { workspace = true }
tokio = { workspace = true, features = [
  "bytes",
  "rt-multi-thread",
  "signal",
  "test-util",
  "tokio-macros",
] }
static_assertions = { workspace = true }
zerocopy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
object_store = { workspace = true, features = ["aws"] }
bytes = { workspace = true }
memmap2 = { workspace = true }
http = { workspace = true }
rlimit = { workspace = true }
hashbrown = { workspace = true }
futures = { workspace = true }
axum = { workspace = true, features = ["http2"] }
tower-http = { workspace = true, features = [
  "compression-full",
  "catch-panic",
] }
prost = { workspace = true }
prost-types = { workspace = true }
assert_matches = { workspace = true }
fjall = { workspace = true }
lsm-tree = { workspace = true }
tempfile = { workspace = true }
foldhash = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
config = { workspace = true, features = ["toml"] }
url = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
measured = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
graft-core = { path = "../graft-core", features = ["testutil"] }
graft-test = { path = "../graft-test" }
axum-test = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
