[package]
name = "graft-sqlite-extension"
version = "0.1.5"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

[lib]
name = "graft"
crate-type = ["cdylib", "staticlib"]

[dependencies]
graft-core = { path = "../graft-core", version = "0.1.5" }
graft-client = { path = "../graft-client", version = "0.1.5" }
graft-sqlite = { path = "../graft-sqlite", version = "0.1.5" }
graft-tracing = { path = "../graft-tracing", version = "0.1.5" }

tracing = { workspace = true }
platform-dirs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
config = { workspace = true, features = ["toml"] }
sqlite-plugin = { workspace = true, default-features = false }
precept = { workspace = true }
url = { workspace = true, features = ["serde"] }
culprit = { workspace = true }

[features]
default = ["dynamic"]
dynamic = ["sqlite-plugin/dynamic"]
static = ["sqlite-plugin/static"]

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["precept"]
