[package]
name = "graft-sqlite-extension"
version = "0.2.0-rc.4"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

[lib]
name = "graft"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
graft-core = { path = "../graft-core", version = "0.2.0-rc.4" }
graft-kernel = { path = "../graft-kernel", version = "0.2.0-rc.4" }
graft-sqlite = { path = "../graft-sqlite", version = "0.2.0-rc.4" }
graft-tracing = { path = "../graft-tracing", version = "0.2.0-rc.4" }

tokio = { workspace = true }
tracing = { workspace = true }
platform-dirs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
config = { workspace = true, features = ["toml"] }
sqlite-plugin = { workspace = true, default-features = false }
precept = { workspace = true }
url = { workspace = true, features = ["serde"] }

[features]
default = ["dynamic"]
dynamic = ["sqlite-plugin/dynamic"]
static = ["sqlite-plugin/static"]

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["precept"]
