[package]
name = "graft-sqlite-extension"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
graft = { path = "../graft" }
graft-sqlite = { path = "../graft-sqlite" }
graft-tracing = { path = "../graft-tracing" }

tokio = { workspace = true }
tracing = { workspace = true }
platform-dirs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
config = { workspace = true, features = ["toml"] }
sqlite-plugin = { workspace = true, default-features = false }
precept = { workspace = true }
url = { workspace = true, features = ["serde"] }

[features]
default = ["dynamic"]
dynamic = ["sqlite-plugin/dynamic"]
static = ["sqlite-plugin/static"]

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["precept"]
