[package]
name = "graft-sqlite"
version = "0.1.5"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

description = "A SQLite extension which uses Graft to replicate to and from object storage."

[lints]
workspace = true

[dependencies]
graft-core = { path = "../graft-core", version = "0.1.5" }
graft-kernel = { path = "../graft-kernel", version = "0.1.5" }
graft-tracing = { path = "../graft-tracing", version = "0.1.5" }

bytes = { workspace = true }
bytestring = { workspace = true }
culprit = { workspace = true }
enum_dispatch = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
parking_lot = { workspace = true }
sqlite-plugin = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tryiter = { workspace = true }
zerocopy = { workspace = true }
