[package]
name = "graft-sqlite"
version = "0.2.0-rc.2"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

description = "A SQLite extension which uses Graft to replicate to and from object storage."

[lints]
workspace = true

[dependencies]
graft-core = { path = "../graft-core", version = "0.2.0-rc.2" }
graft-kernel = { path = "../graft-kernel", version = "0.2.0-rc.2" }

bytes = { workspace = true }
bytestring = { workspace = true }
culprit = { workspace = true }
enum_dispatch = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
parking_lot = { workspace = true }
platform-dirs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlite-plugin = { workspace = true, default-features = false }
thiserror = { workspace = true }
tracing = { workspace = true }
tryiter = { workspace = true }
tokio = { workspace = true }
zerocopy = { workspace = true }

[features]
default = []
# export a register_static method allowing the Graft SQLite extension to be
# statically setup in a Rust project
register-static = ["sqlite-plugin/static"]
