[package]
name = "graft-test"
version = "0.1.0"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
graft-core = { path = "../graft-core", features = ["testutil"] }
graft-kernel = { path = "../graft-kernel" }
graft-tracing = { path = "../graft-tracing" }
graft-test-macro = { path = "../graft-test-macro" }
graft-sqlite = { path = "../graft-sqlite" }

sqlite-plugin = { workspace = true, features = ["static"] }
precept = { workspace = true, features = ["antithesis"] }
enum_dispatch = { workspace = true }
culprit = { workspace = true }
crossbeam = { workspace = true }
file-lock = { workspace = true }
url = { workspace = true }
ureq = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
rand = { workspace = true }
config = { workspace = true, features = ["toml"] }
toml = { workspace = true }
blake3 = { workspace = true }
bs58 = { workspace = true }
zerocopy = { workspace = true }
static_assertions = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
