[package]
name = "graft-test"
version = "0.1.0"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
graft = { path = "../graft", features = ["testutil"] }
graft-tracing = { path = "../graft-tracing" }
graft-test-macro = { path = "../graft-test-macro" }
graft-sqlite = { path = "../graft-sqlite" }

blake3 = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
config = { workspace = true, features = ["toml"] }
crossbeam = { workspace = true }
enum_dispatch = { workspace = true }
file-lock = { workspace = true }
object_store = { workspace = true }
precept = { workspace = true, features = ["antithesis"] }
rand = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
sqlite-plugin = { workspace = true, features = ["static"] }
static_assertions = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }
zerocopy = { workspace = true }
