[package]
name = "graft-test"
version = "0.1.0"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
graft = { path = "../graft", features = ["testutil", "precept"] }
graft-sqlite = { path = "../graft-sqlite" }
graft-tracing = { path = "../graft-tracing" }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
file-lock = { workspace = true }
object_store = { workspace = true }
precept = { workspace = true, features = ["antithesis", "enabled"] }
rand = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
sqlite-plugin = { workspace = true, features = ["static"] }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
