[package]
name = "graft-tool"
version = "0.1.0"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

[dependencies]
graft-core = { path = "../graft-core" }

rusty_paseto = { workspace = true, features = ["batteries_included"] }
clap = { workspace = true, features = ["derive"] }
rand = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
