[package]
name = "graft-tracing"
version = "0.2.0-rc.2"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

description = "Tracing support for Graft components."

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "parking_lot"] }
rand = { workspace = true }
bs58 = { workspace = true }
parking_lot = { workspace = true }
